--- a/src/assets/styles/App.css
+++ b/src/assets/styles/App.css
@@ -41,6 +41,17 @@ body {
   box-shadow: 0 2px 3px rgba(0,0,0,0.3);
 }
 
+.line {
+  fill: none;
+  stroke: #7dc7f4;
+  stroke-width: 5px;
+}
+
+.shadow {
+  -webkit-filter: drop-shadow( 0px 2px 2px rgba(0,0,0,.3) );
+  filter: drop-shadow( 0px 2px 2px rgba(0,0,0,.3) );
+}
+
 .stocks-container {
   margin: 20px 10% 40px;
   display: flex;
