--- a/src/assets/styles/App.css
+++ b/src/assets/styles/App.css
@@ -43,13 +43,34 @@ body {
 
 .line {
   fill: none;
-  stroke: #7dc7f4;
   stroke-width: 5px;
 }
 
 .shadow {
   -webkit-filter: drop-shadow( 0px 2px 2px rgba(0,0,0,.3) );
   filter: drop-shadow( 0px 2px 2px rgba(0,0,0,.3) );
+}
+
+.axis path,
+.axis line {
+  fill: none;
+  stroke: none;
+  shape-rendering: crispEdges;
+}
+
+.axis .tick text {
+  font-size: 14px;
+  fill:#bbc7d9;
+  opacity: 1;
+}
+
+.y-grid .tick line{
+  stroke: #4b5f87;
+  opacity: 1;
+}
+
+.y-grid .domain {
+  stroke: none;
 }
 
 .stocks-container {
