--- a/src/assets/styles/App.css
+++ b/src/assets/styles/App.css
@@ -32,6 +32,20 @@ body {
   margin: 0;
 }
 
+.error-message {
+  margin: 10px 10%;
+  padding: 15px 0;
+  background-color: #e15258;
+  border-radius: 4px;
+  color: white;
+  text-align: center;  
+  box-shadow: 0 2px 3px rgba(0,0,0,0.3);
+}
+
+.error-message p {
+  margin: 0;
+}
+
 .chart-container {
   margin: 20px 10%;
   background-color: #3e474f;
@@ -59,7 +73,7 @@ body {
 
 .line {
   fill: none;
-  stroke-width: 5px;
+  stroke-width: 2px;
 }
 
 .shadow {
@@ -67,21 +81,23 @@ body {
   filter: drop-shadow( 0px 2px 2px rgba(0,0,0,.3) );
 }
 
-.axis path,
-.axis line {
+.y.axis path,
+.y.axis line {
   fill: none;
   stroke: none;
   shape-rendering: crispEdges;
+}
+
+.x.axis path,
+.x.axis line {
+  fill: none;
+  stroke: #bbc7d9;
 }
 
 .axis .tick text {
   font-size: 14px;
   fill:#bbc7d9;
   opacity: 1;
-}
-
-.x.axis .tick text {
-  transform: rotate(-45deg);
 }
 
 .y-grid .tick line{
@@ -109,15 +125,63 @@ body {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: flex-start;
 }
 
 .stock {
   width: 30%;
-  height: 100px;
+  margin-right: 20px;
+  margin-bottom: 20px;
+  display: flex;
+  padding-right: 20px;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
   background-color: white;
   border-radius: 6px;
   box-shadow: 0 2px 3px rgba(0,0,0,0.3);
+  transition: box-shadow 0.2s ease-out;
+}
+
+.stock:hover {
+  box-shadow: 0 2px 3px rgba(0,0,0,0.1);
+}
+
+.stock .tongue {
+  width: 10%;
+  height: 100%;
+  border-radius: 4px 0 0 4px;
+}
+
+.stock .info {
+  text-align: center;
+}
+
+.stock p {
+  margin: 0 0 10px 0;
+}
+
+.stock h3 {
+  margin: 10px 0 5px 0;
+}
+
+.stock button {
+  width: 30px;
+  height: 30px;
+  background-color: transparent;
+  border: 3px solid #e15258;
+  color: #e15258;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.stock button:hover {
+  background-color: #e15258;
+  color: white;
+}
+
+.stock button:focus {
+  outline: none;
 }
 
 .footer {
